testsuite/poke.pkl/bconc-diag-3.pk
/* { dg-do compile } */

var a = 2L:::1L; /* { dg-error "exceed" } */
